fixed alignment of menu

--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -67,7 +67,6 @@ textarea {
 .hamburger {
     position: absolute;
     right: 20px;
-    top: 19px;
 }
 
 .desktop-menu {
@@ -107,6 +106,7 @@ textarea {
             cursor: pointer;
             display: flex;
             height: inherit;
+            justify-content: center;
             padding: 0 20px;
         }
         
@@ -182,10 +182,12 @@ textarea {
         }
 
         .secondary-list-element {
+            box-sizing: border-box;
             padding: 20px 0 20px 20px;
+            width: 100%;
 
             @media (min-width: 768px) {
-                width: 47%;
+                width: 50%;
             }
         }
 
